# kit_utiles

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml  pytest.ini  requirements.txt
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
src/: cli.py  ejemplo.py  files.py  numbers.py  strings.py
tests/: test_e01_sum_list.py  test_e02_unique_sorted.py  test_e03_leap_year.py  test_e04_safe_divide.py  test_e05_word_count.py  test_e06_file_roundtrip.py  test_e07_mean.py  test_e08_cli_sum.py  test_e09_validate_email.py  test_e10_grade.py  test_e11_sum_list_neg_floats.py  test_e12_unique_sorted_strings.py  test_e13_safe_divide_types.py  test_e14_word_count_accents_punct.py  test_e15_load_lines_empty_and_nested.py  test_e16_mean_precision.py  test_e17_cli_spaces_and_empty.py  test_e18_cli_spaces_and_empty_bis.py  test_e19_validate_email_subdomains.py  test_e20_grade_edges_more.py
venvKitUtiles/: pyvenv.cfg
